--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,40 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     </nav>
-
+    <div class="sidebar-certificates">
+      <ul>
+        <li>
+          <a target="_blank" href="https://www.youracclaim.com/badges/9320ffc1-fa5f-4513-9db6-30e63b527f83">
+            <img 
+              src="https://images.youracclaim.com/size/340x340/images/649069f9-27f1-4d2b-92bc-c674bc67bd02/azure-solutions-architect-expert-600x600.png" 
+              alt="Microsoft Certified: Azure Solutions Architect Expert" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.youracclaim.com/badges/a7fb6715-9285-4a4e-9b13-1700dd482429">
+            <img 
+              src="https://images.youracclaim.com/size/340x340/images/c3ab66f8-5d59-4afa-a6c2-0ba30a1989ca/CERT-Expert-DevOps-Engineer-600x600.png" 
+              alt="Microsoft Certified: DevOps Engineer Expert" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.youracclaim.com/badges/5737d11c-1c30-45ec-b9ee-f015b80a65e3">
+            <img 
+              src="https://images.youracclaim.com/size/340x340/images/92e0618b-8002-4868-9e88-794a33aeb3b5/azure-developer-associate-600x600.png" 
+              alt="Microsoft Certified: Azure Developer Associate" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.youracclaim.com/badges/a79a59e0-b3d7-4f0b-81cc-4511397f2fc3">
+            <img 
+              src="https://images.youracclaim.com/size/340x340/images/1ad16b6f-2c71-4a2e-ae74-ec69c4766039/azure-security-engineer-associate600x600.png" 
+              alt="Microsoft Certified: Azure Security Engineer Associate" />
+          </a>
+        </li>
+      </ul>
+    </div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
