--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body class="theme-base-0b">
-    {% gtm body %}
+    {% include gtmbody.html %}
     {% include sidebar.html %}
 
     <div class="content container">
